--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "22.0.0"
+    buildToolsVersion "23.0.0 rc1"
     packagingOptions {
         exclude 'LICENSE'
         exclude 'META-INF/NOTICE'
